2003-04-27  Miguel de Icaza  <miguel@ximian.com>

	* ecore.cs (Expression.LoadFromPtr): Use ldind_i when loading
	pointers. 

	* expression.cs (MemberAccess.DoResolve): When we get a type back,
	check the permissions for it.  Note than in a type-resolution
	context the check was already present in DeclSpace.ResolveType,
	but was missing from the MemberAccess.

	(ArrayCreation.CheckIndices): warn if the user has
	more nested levels of expressions, but there are no more
	dimensions specified.  Avoids crash on bug 41906.

2003-04-26  Miguel de Icaza  <miguel@ximian.com>

	* statement.cs (Block): replace Implicit bool, for a generic
	flags.   
	New flag: `Unchecked'.  This is used during the EmitMeta phase
	(which is out-of-line with the regular Resolve/Emit process for a
	statement, as this is done ahead of time, but still gets a chance
	to call constant resolve).
	
	(Block.Flags): new enum for adding a new flag.

	(Block.EmitMeta): track the state of unchecked.
	
	(Unchecked): Set the "UnChecked" flags on any blocks we enclose,
	to enable constant resolution to work there as well.

2003-04-22  Miguel de Icaza  <miguel@ximian.com>

	* typemanager.cs (ienumerable_type): Also look up
	System.Collections.IEnumerable. 

2003-04-21  Miguel de Icaza  <miguel@ximian.com>

	TODO: Test more than one conditional per method.
	
	* class.cs (Indexer.Define): Report the location where the user is
	referencing the unsupported feature.

	(MethodData): Overload the use of `conditionals' to
	minimize the creation of needless ArrayLists.   This saves roughly
	212kb on my machine.

	(Method): Implement the new IIteratorContainer interface.
	(Method.SetYields): Implement the method by setting the ModFlags
	to contain METHOD_YIELDS.
	
	* expression.cs (Unary.ResolveOperator): Use expr_type, not Expr,
	which just got set to null.

	* iterators.cs: New file.

	(Yield, YieldBreak): New statements.

	* statement.cs (Return.Resolve): Flag an error if we are used in
	an iterator method.
